--- a/JavaScript/常用的数组方法.md
+++ b/JavaScript/常用的数组方法.md
@@ -1,6 +1,8 @@
+如果你掌握了 Es6 数组的一些常用的方法，会让你的代码更加简洁|
+
 # ES6 数组常用方法 
 
-参考：[**hellobaby**](https://segmentfault.com/u/hellobaby_58772ee151eab) （https://segmentfault.com/a/1190000012429718）
+参考：[**hellobaby**](https://segmentfault.com/u/hellobaby_58772ee151eab) 
 
 
 
