--- a/JavaScript/一篇文章搞懂事件循环机制/一篇文章搞懂事件循环机制.md
+++ b/JavaScript/一篇文章搞懂事件循环机制/一篇文章搞懂事件循环机制.md
@@ -1,5 +1,7 @@
-﻿
+
 为了协调事件、用户交互、脚本、UI 渲染和网络处理等行为，用户引擎必须使用 event loops。Event Loop 包含两类：一类是基于 Browsing Context ，一种是基于 Worker ，二者是独立运行的。|
+
+
 参考：
 
 1. [深入理解Javascript 事件处理机制](https://www.cnblogs.com/yugege/p/9598265.html)
@@ -48,7 +50,7 @@ setTimeout
 
 所有的任务可以分为同步任务和异步任务，同步任务，顾名思义，就是立即执行的任务，同步任务一般会直接进入到主线程中执行；而异步任务，就是异步执行的任务，比如ajax网络请求，setTimeout 定时函数等都属于异步任务，异步任务会通过任务队列( Event Queue )的机制来进行协调。具体的可以用下面的图来大致说明一下：
 
-![img](https://images2018.cnblogs.com/blog/698814/201809/698814-20180906144953689-838865376.jpg)
+![img](https://github.com/hugo1o1/images/blob/master/posts/8.10_1.jpg?raw=true)
 
 在事件循环中，每进行一次循环操作称为tick，通过阅读规范可知，每一次 tick 的任务处理模型是比较复杂的，其关键的步骤可以总结如下：
 
@@ -58,7 +60,7 @@ setTimeout
 4. 主线程重复执行上述步骤
 
 可以用一张图来说明下流程：
-![img](https://images2018.cnblogs.com/blog/698814/201809/698814-20180906145003189-254912994.jpg)
+![img](https://github.com/hugo1o1/images/blob/master/posts/8.10_2.jpg?raw=true)
 
 这里相信有人会想问，什么是 microtasks ?规范中规定，task分为两大类, 分别是 Macro Task （宏任务）和 Micro Task（微任务）, 并且每个宏任务结束后, 都要清空所有的微任务,这里的 Macro Task也是我们常说的 task ，有些文章并没有对其做区分，后面文章中所提及的task皆看做宏任务( macro task)。
 
@@ -133,7 +135,7 @@ console.log('script end');
 
 用流程图看更清晰：
 
-![img](https://images2018.cnblogs.com/blog/698814/201809/698814-20180906145019481-518705719.jpg)
+![img](https://github.com/hugo1o1/images/blob/master/posts/8.10_3.jpg?raw=true)
 
 ### 总结
 
@@ -141,4 +143,9 @@ console.log('script end');
 
 最后的最后，记住，**JavaScript 是一门单线程语言，异步操作都是放到事件循环队列里面，等待主执行栈来执行的，并没有专门的异步执行线程。**。
 
-### 
+
+
+
+
+
+
