--- a/JavaScript/一篇文章搞懂事件循环机制/一篇文章搞懂事件循环机制.md
+++ b/JavaScript/一篇文章搞懂事件循环机制/一篇文章搞懂事件循环机制.md
@@ -1,32 +1,31 @@
-
 为了协调事件、用户交互、脚本、UI 渲染和网络处理等行为，用户引擎必须使用 event loops。Event Loop 包含两类：一类是基于 Browsing Context ，一种是基于 Worker ，二者是独立运行的。|
-
 
 参考：
 
-1. [深入理解Javascript 事件处理机制](https://www.cnblogs.com/yugege/p/9598265.html)
+1. [深入理解 Javascript 事件处理机制](https://www.cnblogs.com/yugege/p/9598265.html)
 
-2. [Tasks, microtasks, queues and schedules](<https://jakearchibald.com/2015/tasks-microtasks-queues-and-schedules/>)
+2. [Tasks, microtasks, queues and schedules](https://jakearchibald.com/2015/tasks-microtasks-queues-and-schedules/)
 
 JavaScript 是一门单线程语言，虽然在 html5 中提出了 Web-Worker ，但这并未改变 JavaScript 是单线程这一核心。
 
 **为了协调事件、用户交互、脚本、UI 渲染和网络处理等行为，用户引擎必须使用 event loops。Event Loop 包含两类：一类是基于 Browsing Context ，一种是基于 Worker ，二者是独立运行的**。
 
 ```js
-
-console.log('script start');
+console.log("script start");
 
 setTimeout(function() {
-  console.log('setTimeout');
+  console.log("setTimeout");
 }, 0);
 
-Promise.resolve().then(function() {
-  console.log('promise1');
-}).then(function() {
-  console.log('promise2');
-});
+Promise.resolve()
+  .then(function() {
+    console.log("promise1");
+  })
+  .then(function() {
+    console.log("promise2");
+  });
 
-console.log('script end');
+console.log("script end");
 ```
 
 输出结果：
@@ -40,35 +39,33 @@ setTimeout
 ```
 
 没想到吧， promise 和 setTimeout 到底是怎么回事？
-讲道理，如果你学会javascript 的事件循环机制， 你将会超过国内80% 以上的前端开发工程师。
-
-
+讲道理，如果你学会 javascript 的事件循环机制， 你将会超过国内 80% 以上的前端开发工程师。
 
 讲一个知识点。
 
 ### 任务队列
 
-所有的任务可以分为同步任务和异步任务，同步任务，顾名思义，就是立即执行的任务，同步任务一般会直接进入到主线程中执行；而异步任务，就是异步执行的任务，比如ajax网络请求，setTimeout 定时函数等都属于异步任务，异步任务会通过任务队列( Event Queue )的机制来进行协调。具体的可以用下面的图来大致说明一下：
+所有的任务可以分为同步任务和异步任务，同步任务，顾名思义，就是立即执行的任务，同步任务一般会直接进入到主线程中执行；而异步任务，就是异步执行的任务，比如 ajax 网络请求，setTimeout 定时函数等都属于异步任务，异步任务会通过任务队列( Event Queue )的机制来进行协调。具体的可以用下面的图来大致说明一下：
 
 ![img](https://github.com/hugo1o1/images/blob/master/posts/8.10_1.jpg?raw=true)
 
-在事件循环中，每进行一次循环操作称为tick，通过阅读规范可知，每一次 tick 的任务处理模型是比较复杂的，其关键的步骤可以总结如下：
+在事件循环中，每进行一次循环操作称为 tick，通过阅读规范可知，每一次 tick 的任务处理模型是比较复杂的，其关键的步骤可以总结如下：
 
 1. 在此次 tick 中选择最先进入队列的任务( oldest task )，如果有则执行(一次)
-2. 检查是否存在 Microtasks ，如果存在则不停地执行，直至清空Microtask Queue
+2. 检查是否存在 Microtasks ，如果存在则不停地执行，直至清空 Microtask Queue
 3. 更新 render
 4. 主线程重复执行上述步骤
 
 可以用一张图来说明下流程：
 ![img](https://github.com/hugo1o1/images/blob/master/posts/8.10_2.jpg?raw=true)
 
-这里相信有人会想问，什么是 microtasks ?规范中规定，task分为两大类, 分别是 Macro Task （宏任务）和 Micro Task（微任务）, 并且每个宏任务结束后, 都要清空所有的微任务,这里的 Macro Task也是我们常说的 task ，有些文章并没有对其做区分，后面文章中所提及的task皆看做宏任务( macro task)。
+这里相信有人会想问，什么是 microtasks ?规范中规定，task 分为两大类, 分别是 Macro Task （宏任务）和 Micro Task（微任务）, 并且每个宏任务结束后, 都要清空所有的微任务,这里的 Macro Task 也是我们常说的 task ，有些文章并没有对其做区分，后面文章中所提及的 task 皆看做宏任务( macro task)。
 
 (macro)task 主要包含：script( 整体代码)、setTimeout、setInterval、I/O、UI 交互事件、setImmediate(Node.js 环境)
 
-microtask主要包含：Promise、MutaionObserver、process.nextTick(Node.js 环境)
+microtask 主要包含：Promise、MutaionObserver、process.nextTick(Node.js 环境)
 
-setTimeout/Promise 等API便是任务源，而进入任务队列的是由他们指定的具体执行任务。来自不同任务源的任务会进入到不同的任务队列。其中 setTimeout 与 setInterval 是同源的。
+setTimeout/Promise 等 API 便是任务源，而进入任务队列的是由他们指定的具体执行任务。来自不同任务源的任务会进入到不同的任务队列。其中 setTimeout 与 setInterval 是同源的。
 
 ### 分析示例代码
 
@@ -92,7 +89,7 @@ console.log('script end');
 
 1. 整体 script 作为第一个宏任务进入主线程，遇到 console.log，输出 script start
 2. 遇到 setTimeout，其回调函数被分发到宏任务 Event Queue 中
-3. 遇到 Promise，其 then函数被分到到微任务 Event Queue 中,记为 then1，之后又遇到了 then 函数，将其分到微任务 Event Queue 中，记为 then2
+3. 遇到 Promise，其 then 函数被分到到微任务 Event Queue 中,记为 then1，之后又遇到了 then 函数，将其分到微任务 Event Queue 中，记为 then2
 4. 遇到 console.log，输出 script end
 
 至此，Event Queue 中存在三个任务，如下表：
@@ -102,7 +99,7 @@ console.log('script end');
 | setTimeout | then1  |
 | -          | then2  |
 
-1. 执行微任务，首先执行then1，输出 promise1, 然后执行 then2，输出 promise2，这样就清空了所有微任务
+1. 执行微任务，首先执行 then1，输出 promise1, 然后执行 then2，输出 promise2，这样就清空了所有微任务
 2. 执行 setTimeout 任务，输出 setTimeout 至此，输出的顺序是：script start, script end, promise1, promise2, setTimeout
 
 so，你猜对了吗？
@@ -131,7 +128,7 @@ console.log('script end');
 
 这个题目就稍微有点复杂了，我们再分析下：
 
-首先，事件循环从宏任务 (macrotask) 队列开始，最初始，宏任务队列中，只有一个 scrip t(整体代码)任务；当遇到任务源 (task source) 时，则会先分发任务到对应的任务队列中去。所以，就和上面例子类似，首先遇到了console.log，输出 script start； 接着往下走，遇到 setTimeout 任务源，将其分发到任务队列中去，记为 timeout1； 接着遇到 promise，new promise 中的代码立即执行，输出 promise1, 然后执行 resolve ,遇到 setTimeout ,将其分发到任务队列中去，记为 timemout2, 将其 then 分发到微任务队列中去，记为 then1； 接着遇到 console.log 代码，直接输出 script end 接着检查微任务队列，发现有个 then1 微任务，执行，输出then1 再检查微任务队列，发现已经清空，则开始检查宏任务队列，执行 timeout1,输出 timeout1； 接着执行 timeout2，输出 timeout2 至此，所有的都队列都已清空，执行完毕。其输出的顺序依次是：script start, promise1, script end, then1, timeout1, timeout2
+首先，事件循环从宏任务 (macrotask) 队列开始，最初始，宏任务队列中，只有一个 scrip t(整体代码)任务；当遇到任务源 (task source) 时，则会先分发任务到对应的任务队列中去。所以，就和上面例子类似，首先遇到了 console.log，输出 script start； 接着往下走，遇到 setTimeout 任务源，将其分发到任务队列中去，记为 timeout1； 接着遇到 promise，new promise 中的代码立即执行，输出 promise1, 然后执行 resolve ,遇到 setTimeout ,将其分发到任务队列中去，记为 timemout2, 将其 then 分发到微任务队列中去，记为 then1； 接着遇到 console.log 代码，直接输出 script end 接着检查微任务队列，发现有个 then1 微任务，执行，输出 then1 再检查微任务队列，发现已经清空，则开始检查宏任务队列，执行 timeout1,输出 timeout1； 接着执行 timeout2，输出 timeout2 至此，所有的都队列都已清空，执行完毕。其输出的顺序依次是：script start, promise1, script end, then1, timeout1, timeout2
 
 用流程图看更清晰：
 
@@ -139,13 +136,6 @@ console.log('script end');
 
 ### 总结
 
-有个小 tip：从规范来看，microtask 优先于 task 执行，所以如果有需要优先执行的逻辑，放入microtask 队列会比 task 更早的被执行。
+有个小 tip：从规范来看，microtask 优先于 task 执行，所以如果有需要优先执行的逻辑，放入 microtask 队列会比 task 更早的被执行。
 
 最后的最后，记住，**JavaScript 是一门单线程语言，异步操作都是放到事件循环队列里面，等待主执行栈来执行的，并没有专门的异步执行线程。**。
-
-
-
-
-
-
-
